0031994: Draw Harness - dversion prints "Architecture: unrecognized" on ARM host

Added handling of __aarch64__ macros.